SLLS-170 Add assertion for defaultImpacts (from new CCT) in CommandManagerTests